test/conformance/chainsaw/mutate/policy/cornercases/foreach-remove-elements/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - name: busybox
    image: busybox:1.35
  volumes:
  - name: socket
    hostPath:
      path: "/var/run/foo"
  - name: vault-secret
    emptyDir:
      medium: Memory
  - name: bar
    hostPath:
      path: "/var/run/bar"
