test/conformance/chainsaw/mutate/policy/cornercases/foreach-remove-elements/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  volumes:
  - name: vault-secret
    emptyDir:
      medium: Memory
  - projected: {}
